<resources>
    <string name="app_name">RickAndMorty</string>

    <string name="menu_characters">characters</string>
    <string name="menu_locations">locations</string>
    <string name="menu_episodes">episodes</string>
    <string name="characters_title">Characters</string>
    <string name="locations_title">Locations</string>
    <string name="episodes_title">Episodes</string>
    <string name="character_details_title">Character details</string>
    <string name="location_details_title">Location details</string>
    <string name="episode_details_title">Episode details</string>
    <string name="empty_message">Empty.</string>
    <string name="desc_filter_button">filter button</string>
    <string name="desc_back_button">back button</string>
    <string name="desc_search_button">search button</string>
    <string name="desc_character_image">character image</string>
    <string name="information">Information</string>
    <string name="name_character_name">Name: [CHARACTER_NAME]</string>
    <string name="status_character_status">Status: [CHARACTER_STATUS]</string>
    <string name="species_character_species">Species: [CHARACTER_SPECIES]</string>
    <string name="type_character_type">Type: [CHARACTER_TYPE]</string>
    <string name="gender_character_gender">Gender: [CHARACTER_GENDER]</string>
    <string name="last_known_location_endpoint">Last known location endpoint</string>
    <string name="origin_location">Origin location</string>
    <string name="episodes_in_which_it_appeared">Episodes in which it appeared</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="number">Number:</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="residents_divider">Residents</string>
    <string name="type_location_type">Type: [LOCATION_TYPE]</string>
    <string name="dimension_location_dimension">Dimension: [LOCATION_DIMENSION]</string>
    <string name="episode_episode">Episode: [EPISODE_EPISODE]</string>
    <string name="episode_air_date_episode">Air date: [EPISODE_AIR_DATE]</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="dialog_locations_filter">Locations filter</string>
    <string name="dialog_episodes_filter">Episodes filter</string>
    <string name="dialog_characters_filter">Characters filter</string>
    <string name="location_name">Location Name</string>
    <string name="location_type">Location Type</string>
    <string name="location_dimension">Location Dimension</string>
    <string name="episode_code">Episode Code</string>
    <string name="episode_name">Episode Name</string>
    <string name="character_name">Character Name</string>
    <string name="character_species">Character Species</string>
    <string name="character_type">Character Type</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="search_for">Search for...</string>
    <string name="error">Error</string>

</resources>